Fixed styling on LoginPage to remove white space at bottom.

--- a/use-my-tools/src/components/css/LoginPage.css
+++ b/use-my-tools/src/components/css/LoginPage.css
@@ -1,10 +1,13 @@
 .login {
 	background-color: #eaeaea;
-	height: 100vh;
+	height: auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .login form {
-	height: 100%;
+	height: max-content;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
